Altered ore tiers to have proper progression instead of placeholders. Added all ores and weapon textures. (600+ Textures!) Added all Raw, Ingot, and Nugget variants for Ores Added Lang for all weapons, creative tabs, and other items. Made proper DeferredRegistry class for Creative Tabs.