@@ -1,12 +1,14 @@
 package com.fuyuvulpes.yoamod.datagen.generators.loot;
 
 import com.fuyuvulpes.yoamod.registries.BlocksModReg;
+import net.minecraft.core.Holder;
 import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.block.Block;
 import net.neoforged.neoforge.registries.DeferredHolder;
 
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class ModBlockLoot extends BlockLootSubProvider {
     public ModBlockLoot() {
@@ -25,6 +27,6 @@ public class ModBlockLoot extends BlockLootSubProvider {
     @Override
     protected Iterable<Block> getKnownBlocks() {
 
-        return (Iterable<Block>) BlocksModReg.BLOCKS.getEntries().stream().map(DeferredHolder::value).toList().iterator();
+        return BlocksModReg.BLOCKS.getEntries().stream().map(Holder::value).collect(Collectors.toList());
     }
 }
